[SITES-25247] fixed overlapped elements on 320px (#496)

--- a/ui.frontend/src/main/webpack/components/navigation/scss/styles/_nav-mobile.scss
+++ b/ui.frontend/src/main/webpack/components/navigation/scss/styles/_nav-mobile.scss
@@ -117,7 +117,11 @@ $nav-item-mobile-border : solid 1px rgba(255, 255, 255, 0.05);
             font-size: 1.75rem;
             padding: 0.5rem;
             float: left;
-    }
+
+            @media (max-width: $screen-xxsmall) {
+                margin-top: 90px;
+            }
+        }
 
     }
 
